tech-studio-projects/financial-industry/high-frequency-trading-system-simulation/java/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-system-ingress
spec:
  rules:
    - host: hft-system.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-system-service
                port:
                  number: 80
